[package]
name = "transformer-rust-api"
version = "0.1.0"
authors = ["Tevinthuku <tevinthuku@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
js_typify_gostruct = "0.3.1"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
